<resources>

    <string name="app_name">모여</string>

    <!-- Main -->
    <string name="description_fab_planner">AI 여행 일정 플래너</string>

    <!-- Plan -->
    <string name="title_my_travel_schedule">우리의 여행일정</string>
    <string name="description_travel_add_button">여행 추가 버튼</string>
    <string name="description_plan_image">여행 대표 이미지 작가 djvstock 출처 Freepik</string>
    <string name="description_plan_edit_button">일정 수정 버튼</string>
    <string name="description_plan_delete_button">일정 삭제 버튼</string>
    <string name="title_dialog_edit_trip">일정 정보 수정</string>
    <string name="description_dialog_close">여행 수정 다이어로그 닫기 버튼</string>
    <string name="text_trip_title">일정 이름</string>
    <string name="text_trip_start_date">여행 시작 날짜</string>
    <string name="text_trip_end_date">여행 종료 날짜</string>
    <string name="description_bus_icon">bus image</string>
    <string name="description_car_icon">car image</string>
    <string name="text_duration">체류 시간</string>
    <string name="title_invite">같이 갈 사람 초대하기</string>
    <string name="text_invite_link">초대하기</string>

    <!-- Album -->
    <string name="label_album">Album</string>
    <string name="label_album_detail">Album Detail</string>
    <string name="label_photo_detail">Photo Detail</string>
    <string name="label_photo_upload">Photo Upload</string>
    <string name="title_album">추억 앨범</string>
    <string name="text_album_empty">앨범이 없습니다.</string>
    <string name="title_photo_comment">추억 나누기</string>
    <string name="title_photo_upload">업로드</string>
    <string name="text_range_center">~</string>
    <string name="text_photo_add">추가하기</string>
    <string name="message_location_permission">위치 권한을 허용해주세요.</string>
    <string name="message_get_albums">앨범을 받아오는 데 성공했습니다.</string>
    <string name="message_fail_to_get_albums">앨범을 받아오는 데 실패했습니다.</string>
    <string name="message_fail_to_get_album_detail">앨범을 불러오는 데 실패했습니다.</string>
    <string name="message_select_picture_permission">사진을 업로드하려면 권한이 필요합니다.</string>
    <string name="message_select_picture">사진을 선택해주세요!</string>
    <string name="description_fab">일정 추가 버튼</string>
    <string name="description_car_image">차 이미지</string>
    <string name="description_transit">대중교통 이미지</string>
    <string name="description_back_btn">뒤로가기 이미지 버튼</string>
    <string name="description_btn_add_person">사람 추가 버튼</string>
    <string name="description_switch">이동 수단 선택 스위치</string>
    <string name="description_schedule_icon">일정 아이콘</string>
    <string name="title_dialog_invite">같이 갈 사람 추가하기</string>
    <string name="text_link_title">초대 링크</string>
    <string name="string_link">초대 링크 복사하기</string>
    <string name="text_comment_submit">등록</string>
    <string name="message_refresh_photo">추억 정보를 다시 불러왔습니다.</string>
    <string name="text_hint_comment">100자 이내로 입력해주세요.</string>
    <string name="text_no_comment">아직 나눈 추억이 없어요.</string>
    <string name="message_photo_duplicated">이미 업로드하기로 결정한 사진입니다.</string>
    <string name="message_photo_upload">이미지를 업로드했습니다.</string>
    <string name="message_fail_to_upload_photo">이미지 업로드에 실패했습니다.</string>
    <string name="message_fail_to_get_photo_comments">남긴 추억 불러오기에 실패했습니다.</string>
    <string name="message_photo_download">이미지를 다운로드합니다.</string>
    <string name="message_success_to_delete_photo">이미지를 삭제했습니다.</string>
    <string name="message_fail_to_delete_photo">이미지 삭제에 실패했습니다.</string>
    <string name="title_comment_delete">추억 삭제하기</string>
    <string name="text_comment_delete">남긴 추억을 삭제하시겠습니까?</string>
    <string name="text_delete">삭제하기</string>
    <string name="message_comment_submit">추억을 남겼습니다.</string>
    <string name="message_fail_to_comment_submit">추억 남기기에 실패했습니다.</string>
    <string name="message_comment_update">추억을 수정했습니다.</string>
    <string name="message_fail_to_comment_update">추억 수정에 실패했습니다.</string>
    <string name="message_comment_delete">추억을 삭제했습니다.</string>
    <string name="message_fail_to_comment_delete">추억 삭제에 실패했습니다.</string>
    <string name="description_photo_upload">이미지 업로드</string>
    <string name="description_photo_tab_layout">이미지 ViewPager</string>
    <string name="title_photo_place_classify">이미지 촬영 장소 편집</string>
    <string name="text_place_classification_update">장소 편집하기</string>
    <string name="text_hint_place_classification_input">직접 입력하기</string>
    <string name="text_place_classification_change">장소 변경</string>
    <string name="text_update_place_name">장소 이름 변경</string>
    <string name="text_update">변경</string>
    <string name="text_description_update_place_name"> · 탭을 길게 누르면 장소 이름을 변경할 수 있습니다.</string>

    <!-- Setting -->
    <string name="label_setting">Setting</string>
    <string name="text_my_travel">내 여행</string>
    <string name="text_my_album">내 사진첩</string>
    <string name="text_my_tour">관광지 찜 목록</string>
    <string name="text_tour_search">관광지 검색</string>
    <string name="text_settings">환경설정</string>
    <string name="text_update_profile">프로필 수정</string>
    <string name="text_permission_setting">권한 설정</string>
    <string name="text_notification_setting">알림 설정</string>
    <string name="text_logout">로그아웃</string>
    <string name="text_information">고객 지원</string>
    <string name="text_version">버전 정보</string>
    <string name="text_version_value">v1.0.1</string>
    <string name="text_hint_update_name">수정할 이름을 입력해주세요.</string>
    <string name="text_hint_update_message">수정할 상태 메시지를 입력해주세요.</string>
    <string name="text_profile_update">프로필 수정하기</string>
    <string name="message_update_profile">프로필을 업데이트했습니다.</string>
    <string name="message_fail_to_update_profile">프로필 업데이트에 실패했습니다.</string>

    <!-- Auth -->
    <string name="label_login">Login</string>
    <string name="label_join">Join</string>
    <string name="title_login">로그인</string>
    <string name="title_join">회원가입</string>
    <string name="text_login_description">로그인해주세요.</string>
    <string name="text_join_description"> · 이메일은 이메일 형식에 맞춰 입력하세요. \n· 비밀번호는 영문, 숫자 혼합하여 8~16자리 이내로 입력하세요. 특수문자는 꼭 1자 이상 포함하세요.\n· 아이디와 같은 비밀번호, 생일, 학번, 전화번호 등 개인정보와 관련된 숫자, 연속된 숫자, 동일하게 반복된 숫자 등 다른 사람이 쉽게 알아낼 수 있는 비밀번호는 유출 위험이 높아요.</string>
    <string name="text_login_email">이메일</string>
    <string name="text_login_password">비밀번호</string>
    <string name="text_login_success">님 어서오세요.</string>
    <string name="message_login_fail">로그인에 실패하였습니다.</string>
    <string name="text_hint_join_email">이메일을 입력해주세요.</string>
    <string name="text_hint_join_name">닉네임을 입력해주세요.</string>
    <string name="text_hint_join_phone_number">전화번호를 입력해주세요.</string>
    <string name="text_hint_join_password">비밀번호를 입력해주세요.</string>
    <string name="text_hint_join_password_again">비밀번호를 다시 입력해주세요.</string>
    <string name="text_hint_join_profile_message">상태메시지를 입력해주세요.</string>
    <string name="message_join_fail">회원가입에 실패하였습니다.</string>
    <string name="text_login_notice">로그인해주세요.</string>

    <!--AiPlanning-->
    <string name="local_planning">지역</string>
    <string name="destination_planning">목적지</string>
    <string name="place_planning">관광지</string>
    <string name="place_search">관광지 검색</string>
    <string name="place_search_question">관광지를 검색해주세요</string>
    <string name="period_planning">일정</string>
    <string name="next">다음</string>
    <string name="select_start_date_planning"><font color="#FF3B82F6">여행 시작일</font>을 선택해주세요.</string>
    <string name="select_end_date_planning"><font color="#FF3B82F6">여행 종료일</font>을 선택해주세요.\nAI 일정 생성은 <font color="#FF3B82F6">최대 7일</font>까지 생성 가능합니다.</string>
    <string name="select_time_planning"><font color="#FF3B82F6">시작 날 시작 시간</font>과\n<font color="#FF3B82F6">마지막 날 마칠 시간</font>을 정해주세요</string>
    <string name="place_name_planning">장소 이름</string>
    <string name="place_classify_planning">장소 분류</string>
    <string name="name_planning">이름</string>
    <string name="category_planning">카테고리</string>
    <string name="select_limit_toast_planning">선택지는 3개를 초과할 수 없습니다.</string>
    <string name="add_festival">추가하기</string>
    <string name="theme_planning">테마</string>

    <!-- theme strings-->
    <string name="theme_mountain">산</string>
    <string name="theme_beach">바다</string>
    <string name="theme_camping">캠핑</string>
    <string name="theme_park">공원</string>
    <string name="theme_shopping">쇼핑</string>
    <string name="theme_museum">박물관</string>
    <string name="theme_zoo">동물원</string>
    <string name="theme_botanic_garden">식물원</string>

    <!-- CalendarView-->
    <string name="sun_calendar">일</string>
    <string name="mon_calendar">월</string>
    <string name="tue_calendar">화</string>
    <string name="wend_calendar">수</string>
    <string name="thur_calendar">목</string>
    <string name="fri_calendar">금</string>
    <string name="sat_calendar">토</string>

    <!-- firebase-->
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--notification-->
    <string name="notification">알림</string>

    <!--home-->
    <string name="festival_title_home"><font color="#FF3B82F6">축제 정보</font>를 확인해보세요!</string>
    <string name="person_icon">Person Icon</string>
    <string name="Trip_Title_hint">Enter Title</string>
    <string name="text_dialog_ok">확인</string>
    <string name="text_dialog_delete">삭제</string>
    <string name="text_minute">분</string>


</resources>