<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="400dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/round_border"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:text="@string/title_dialog_edit_trip"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="32sp" />

    <ImageButton
        android:id="@+id/button_dialog_edit_close"
        android:contentDescription="@string/description_dialog_close"
        android:scaleType="fitXY"
        android:background="@android:color/transparent"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_close"/>

    <TextView
        android:id="@+id/tv_title_plan_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/text_trip_title"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dialog_title"/>

    <EditText
        android:id="@+id/et_trip_title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="text"
        android:layout_margin="5dp"
        android:background="@drawable/edit_text_background"
        app:layout_constraintTop_toBottomOf="@id/tv_title_plan_detail"/>

    <TextView
        android:id="@+id/title_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/text_trip_start_date"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_trip_title"/>

    <TextView
        android:id="@+id/tv_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_start_date"
        />

    <TextView
        android:id="@+id/title_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/text_trip_end_date"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_start_date"/>
    <TextView
        android:id="@+id/tv_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_end_date"
        />

    <ImageButton
        android:id="@+id/button_dialog_calendar_start"
        android:contentDescription="@string/description_dialog_close"
        android:scaleType="fitXY"
        android:background="@android:color/transparent"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="@id/title_start_date"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/baseline_calendar_month_24"/>
    <ImageButton
        android:id="@+id/button_dialog_calendar_end"
        android:contentDescription="@string/description_dialog_close"
        android:scaleType="fitXY"
        android:background="@android:color/transparent"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="@id/title_end_date"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/baseline_calendar_month_24"/>



</androidx.constraintlayout.widget.ConstraintLayout>
