<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.neungi.moyeo.views.auth.viewmodel.AuthViewModel" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_join"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".views.auth.JoinFragment">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_start_join"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/dp_medium" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_top_join"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/dp_medium" />

            <TextView
                android:id="@+id/tv_title_join"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendardbold"
                android:text="@string/title_join"
                android:textAlignment="viewStart"
                android:textColor="@color/neutral_100"
                android:textSize="@dimen/font_size_title"
                app:layout_constraintEnd_toStartOf="@id/gl_end_join"
                app:layout_constraintStart_toEndOf="@id/gl_start_join"
                app:layout_constraintTop_toBottomOf="@id/gl_top_join" />

            <TextView
                android:id="@+id/tv_description_join"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendardsemibold"
                android:text="@string/text_join_description"
                android:textAlignment="viewStart"
                android:textColor="@color/neutral_90"
                android:textSize="@dimen/font_size_medium"
                app:layout_constraintBottom_toTopOf="@id/til_email_join"
                app:layout_constraintEnd_toStartOf="@id/gl_end_join"
                app:layout_constraintStart_toEndOf="@id/gl_start_join"
                app:layout_constraintTop_toBottomOf="@id/tv_title_join"
                app:layout_constraintVertical_chainStyle="packed" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email_join"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_medium"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:hintEnabled="false"
                app:layout_constraintBottom_toTopOf="@id/til_name_join"
                app:layout_constraintEnd_toStartOf="@id/gl_end_join"
                app:layout_constraintStart_toEndOf="@id/gl_start_join"
                app:layout_constraintTop_toBottomOf="@id/tv_description_join"
                app:validateJoinEmail="@{vm.authUiState}">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_email_join"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_edit_text"
                    android:hint="@string/text_hint_join_email"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:onTextChanged="@{(email, s, b, c) -> vm.validJoinEmail(email)}"
                    android:text="@={vm.joinEmail}"
                    android:textColor="@color/neutral_70"
                    app:normalEditText="@{``}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name_join"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_medium"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:hintEnabled="false"
                app:layout_constraintBottom_toTopOf="@id/til_phone_number_join"
                app:layout_constraintEnd_toStartOf="@id/gl_end_join"
                app:layout_constraintStart_toEndOf="@id/gl_start_join"
                app:layout_constraintTop_toBottomOf="@id/til_email_join"
                app:validateJoinName="@{vm.authUiState}">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_name_join"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_edit_text"
                    android:hint="@string/text_hint_join_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="12"
                    android:onTextChanged="@{(name, s, b, c) -> vm.validJoinName(name)}"
                    android:text="@={vm.joinName}"
                    android:textColor="@color/neutral_70"
                    app:normalEditText="@{``}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_phone_number_join"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_medium"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:hintEnabled="false"
                app:layout_constraintBottom_toTopOf="@id/til_password_join"
                app:layout_constraintEnd_toStartOf="@id/gl_end_join"
                app:layout_constraintStart_toEndOf="@id/gl_start_join"
                app:layout_constraintTop_toBottomOf="@id/til_name_join"
                app:validateJoinPhoneNumber="@{vm.authUiState}">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_phone_number_join"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_edit_text"
                    android:hint="@string/text_hint_join_phone_number"
                    android:imeOptions="actionNext"
                    android:inputType="phone"
                    android:onTextChanged="@{(phoneNumber, s, b, c) -> vm.validJoinPhoneNumber(phoneNumber)}"
                    android:text="@={vm.joinPhoneNumber}"
                    android:textColor="@color/neutral_70"
                    app:normalEditText="@{``}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password_join"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_medium"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:hintEnabled="false"
                app:layout_constraintBottom_toTopOf="@id/til_password_again_join"
                app:layout_constraintEnd_toStartOf="@id/gl_end_join"
                app:layout_constraintStart_toEndOf="@id/gl_start_join"
                app:layout_constraintTop_toBottomOf="@id/til_phone_number_join"
                app:passwordToggleEnabled="true"
                app:validateJoinPassword="@{vm.authUiState}">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_password_join"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_edit_text"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/text_hint_join_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:onTextChanged="@{(password, s, b, c) -> vm.validJoinPassword(password)}"
                    android:text="@={vm.joinPassword}"
                    android:textColor="@color/neutral_70"
                    app:normalEditText="@{``}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password_again_join"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_medium"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:hintEnabled="false"
                app:layout_constraintEnd_toStartOf="@id/gl_end_join"
                app:layout_constraintStart_toEndOf="@id/gl_start_join"
                app:layout_constraintTop_toBottomOf="@id/til_password_join"
                app:passwordToggleEnabled="true"
                app:validateJoinPasswordAgain="@{vm.authUiState}">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_password_again_join"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/shape_edit_text"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/text_hint_join_password_again"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:onTextChanged="@{(passwordAgain, s, b, c) -> vm.validJoinPasswordAgain(passwordAgain)}"
                    android:text="@={vm.joinPasswordAgain}"
                    android:textColor="@color/neutral_70"
                    app:normalEditText="@{``}" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_join"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_medium"
                android:background="@drawable/selector_button"
                android:enabled="@{vm.authUiState.isJoinBtnEnable}"
                android:fontFamily="@font/pretendardsemibold"
                android:onClick="@{() -> vm.onClickJoinFinish()}"
                android:text="@string/title_join"
                android:textColor="@{(vm.authUiState.isJoinBtnEnable == true) ? @color/neutral_white : @color/neutral_90}"
                android:textSize="@dimen/font_size_medium"
                app:layout_constraintBottom_toTopOf="@id/gl_bottom_join"
                app:layout_constraintEnd_toStartOf="@id/gl_end_join"
                app:layout_constraintStart_toEndOf="@id/gl_start_join"
                app:layout_constraintTop_toBottomOf="@id/til_password_again_join" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_end_join"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/dp_medium" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_bottom_join"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="@dimen/dp_medium" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>