<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.neungi.moyeo.views.setting.viewmodel.SettingViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_profile_update"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.setting.ProfileUpdateFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start_profile_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/dp_medium" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_top_profile_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/dp_medium" />


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_profile_update"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/baseline_chevron_left_24"
            app:title="@string/text_update_profile" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_profile_update"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/dp_medium"
            android:onClick="@{() -> vm.onClickUploadProfileImage()}"
            app:layout_constraintEnd_toStartOf="@id/gl_end_profile_update"
            app:layout_constraintStart_toEndOf="@id/gl_start_profile_update"
            app:layout_constraintTop_toBottomOf="@id/toolbar_profile_update"
            app:uriProfileImage="@{vm.updateUserProfileImage}" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name_profile_update"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_medium"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:hintEnabled="false"
            app:layout_constraintEnd_toStartOf="@id/gl_end_profile_update"
            app:layout_constraintStart_toEndOf="@id/gl_start_profile_update"
            app:layout_constraintTop_toBottomOf="@id/iv_profile_update"
            app:validateUpdateName="@{vm.settingUiState}">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_name_profile_update"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shape_edit_text"
                android:hint="@string/text_hint_update_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="12"
                android:onTextChanged="@{(userName, s, b, c) -> vm.validUpdateUserName(userName)}"
                android:text="@={vm.updateUserName}"
                android:textColor="@color/neutral_70"
                app:normalEditText="@{``}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_message_profile_update"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_medium"
            app:errorEnabled="true"
            app:errorIconDrawable="@null"
            app:hintEnabled="false"
            app:layout_constraintEnd_toStartOf="@id/gl_end_profile_update"
            app:layout_constraintStart_toEndOf="@id/gl_start_profile_update"
            app:layout_constraintTop_toBottomOf="@id/til_name_profile_update"
            app:validateUpdateProfileMessage="@{vm.settingUiState}">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_message_profile_update"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/shape_edit_text"
                android:hint="@string/text_hint_update_message"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="12"
                android:text="@={vm.updateUserProfileMessage}"
                android:textColor="@color/neutral_70"
                app:normalEditText="@{``}" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_profile_update"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_medium"
            android:background="@drawable/selector_button"
            android:enabled="@{vm.settingUiState.isUpdateBtnEnable}"
            android:fontFamily="@font/pretendardsemibold"
            android:onClick="@{() -> vm.onClickFinishUpdateProfile()}"
            android:text="@string/text_profile_update"
            android:textColor="@{(vm.settingUiState.isUpdateBtnEnable == true) ? @color/neutral_white : @color/neutral_90}"
            android:textSize="@dimen/font_size_medium"
            app:layout_constraintBottom_toTopOf="@id/gl_bottom_profile_update"
            app:layout_constraintEnd_toStartOf="@id/gl_end_profile_update"
            app:layout_constraintStart_toEndOf="@id/gl_start_profile_update" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end_profile_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/dp_medium" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_bottom_profile_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/dp_medium" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>